[gd_scene load_steps=85 format=2]

[ext_resource path="res://Scripts/Bandit/Bandit.gd" type="Script" id=1]
[ext_resource path="res://Scripts/Bandit/BanditStateMachine.gd" type="Script" id=2]
[ext_resource path="res://assets/Sprites/Characters/Enemy_1 - Bandit/Attack/The_Game__2020_02_20 - Center Copy0001.png" type="Texture" id=3]
[ext_resource path="res://assets/Sprites/Characters/Enemy_1 - Bandit/Attack/The_Game__2020_02_20 - Center Copy0002.png" type="Texture" id=4]
[ext_resource path="res://assets/Sprites/Characters/Enemy_1 - Bandit/Attack/The_Game__2020_02_20 - Center Copy0003.png" type="Texture" id=5]
[ext_resource path="res://assets/Sprites/Characters/Enemy_1 - Bandit/Attack/The_Game__2020_02_20 - Center Copy0004.png" type="Texture" id=6]
[ext_resource path="res://assets/Sprites/Characters/Enemy_1 - Bandit/Attack/The_Game__2020_02_20 - Center Copy0005.png" type="Texture" id=7]
[ext_resource path="res://assets/Sprites/Characters/Enemy_1 - Bandit/Attack/The_Game__2020_02_20 - Center Copy0006.png" type="Texture" id=8]
[ext_resource path="res://assets/Sprites/Characters/Enemy_1 - Bandit/Attack/The_Game__2020_02_20 - Center Copy0007.png" type="Texture" id=9]
[ext_resource path="res://assets/Sprites/Characters/Enemy_1 - Bandit/Attack/The_Game__2020_02_20 - Center Copy0008.png" type="Texture" id=10]
[ext_resource path="res://assets/Sprites/Characters/Enemy_1 - Bandit/Attack/The_Game__2020_02_20 - Center Copy0009.png" type="Texture" id=11]
[ext_resource path="res://assets/Sprites/Characters/Enemy_1 - Bandit/Attack/The_Game__2020_02_20 - Center Copy0010.png" type="Texture" id=12]
[ext_resource path="res://assets/Sprites/Characters/Enemy_1 - Bandit/Attack/The_Game__2020_02_20 - Center Copy0011.png" type="Texture" id=13]
[ext_resource path="res://assets/Sprites/Characters/Enemy_1 - Bandit/Attack/The_Game__2020_02_20 - Center Copy0012.png" type="Texture" id=14]
[ext_resource path="res://assets/Sprites/Characters/Enemy_1 - Bandit/Attack/The_Game__2020_02_20 - Center Copy0013.png" type="Texture" id=15]
[ext_resource path="res://assets/Sprites/Characters/Enemy_1 - Bandit/Attack/The_Game__2020_02_20 - Center Copy0014.png" type="Texture" id=16]
[ext_resource path="res://assets/Sprites/Characters/Enemy_1 - Bandit/Attack/The_Game__2020_02_20 - Center Copy0015.png" type="Texture" id=17]
[ext_resource path="res://assets/Sprites/Characters/Enemy_1 - Bandit/Attack/The_Game__2020_02_20 - Center Copy0016.png" type="Texture" id=18]
[ext_resource path="res://assets/Sprites/Characters/Enemy_1 - Bandit/Attack/The_Game__2020_02_20 - Center Copy0017.png" type="Texture" id=19]
[ext_resource path="res://assets/Sprites/Characters/Enemy_1 - Bandit/Attack/The_Game__2020_02_20 - Center Copy0018.png" type="Texture" id=20]
[ext_resource path="res://assets/Sprites/Characters/Enemy_1 - Bandit/Walk/The_Game__2020_02_20 - Center Copy0001.png" type="Texture" id=21]
[ext_resource path="res://assets/Sprites/Characters/Enemy_1 - Bandit/Walk/The_Game__2020_02_20 - Center Copy0002.png" type="Texture" id=22]
[ext_resource path="res://assets/Sprites/Characters/Enemy_1 - Bandit/Walk/The_Game__2020_02_20 - Center Copy0003.png" type="Texture" id=23]
[ext_resource path="res://assets/Sprites/Characters/Enemy_1 - Bandit/Walk/The_Game__2020_02_20 - Center Copy0004.png" type="Texture" id=24]
[ext_resource path="res://assets/Sprites/Characters/Enemy_1 - Bandit/Walk/The_Game__2020_02_20 - Center Copy0005.png" type="Texture" id=25]
[ext_resource path="res://assets/Sprites/Characters/Enemy_1 - Bandit/Walk/The_Game__2020_02_20 - Center Copy0006.png" type="Texture" id=26]
[ext_resource path="res://assets/Sprites/Characters/Enemy_1 - Bandit/Walk/The_Game__2020_02_20 - Center Copy0007.png" type="Texture" id=27]
[ext_resource path="res://assets/Sprites/Characters/Enemy_1 - Bandit/Walk/The_Game__2020_02_20 - Center Copy0008.png" type="Texture" id=28]
[ext_resource path="res://assets/Sprites/Characters/Enemy_1 - Bandit/Walk/The_Game__2020_02_20 - Center Copy0009.png" type="Texture" id=29]
[ext_resource path="res://assets/Sprites/Characters/Enemy_1 - Bandit/Walk/The_Game__2020_02_20 - Center Copy0010.png" type="Texture" id=30]
[ext_resource path="res://assets/Sprites/Characters/Enemy_1 - Bandit/Walk/The_Game__2020_02_20 - Center Copy0011.png" type="Texture" id=31]
[ext_resource path="res://assets/Sprites/Characters/Enemy_1 - Bandit/Walk/The_Game__2020_02_20 - Center Copy0012.png" type="Texture" id=32]
[ext_resource path="res://assets/Sprites/Characters/Enemy_1 - Bandit/Walk/The_Game__2020_02_20 - Center Copy0013.png" type="Texture" id=33]
[ext_resource path="res://assets/Sprites/Characters/Enemy_1 - Bandit/Walk/The_Game__2020_02_20 - Center Copy0014.png" type="Texture" id=34]
[ext_resource path="res://assets/Sprites/Characters/Enemy_1 - Bandit/Walk/The_Game__2020_02_20 - Center Copy0015.png" type="Texture" id=35]
[ext_resource path="res://assets/Sprites/Characters/Enemy_1 - Bandit/Walk/The_Game__2020_02_20 - Center Copy0016.png" type="Texture" id=36]
[ext_resource path="res://assets/Sprites/Characters/Enemy_1 - Bandit/Walk/The_Game__2020_02_20 - Center Copy0017.png" type="Texture" id=37]
[ext_resource path="res://assets/Sprites/Characters/Enemy_1 - Bandit/Walk/The_Game__2020_02_20 - Center Copy0018.png" type="Texture" id=38]
[ext_resource path="res://assets/Sprites/Characters/Enemy_1 - Bandit/Walk/The_Game__2020_02_20 - Center Copy0019.png" type="Texture" id=39]
[ext_resource path="res://assets/Sprites/Characters/Enemy_1 - Bandit/Walk/The_Game__2020_02_20 - Center Copy0020.png" type="Texture" id=40]
[ext_resource path="res://assets/Sprites/Characters/Enemy_1 - Bandit/Walk/The_Game__2020_02_20 - Center Copy0021.png" type="Texture" id=41]
[ext_resource path="res://assets/Sprites/Characters/Enemy_1 - Bandit/Walk/The_Game__2020_02_20 - Center Copy0022.png" type="Texture" id=42]
[ext_resource path="res://assets/Sprites/Characters/Enemy_1 - Bandit/Walk/The_Game__2020_02_20 - Center Copy0023.png" type="Texture" id=43]
[ext_resource path="res://assets/Sprites/Characters/Enemy_1 - Bandit/Walk/The_Game__2020_02_20 - Center Copy0024.png" type="Texture" id=44]
[ext_resource path="res://assets/Sprites/Characters/Enemy_1 - Bandit/Damage/The_Game__2020_02_20 - Center Copy0001.png" type="Texture" id=45]
[ext_resource path="res://assets/Sprites/Characters/Enemy_1 - Bandit/Damage/The_Game__2020_02_20 - Center Copy0002.png" type="Texture" id=46]
[ext_resource path="res://assets/Sprites/Characters/Enemy_1 - Bandit/Damage/The_Game__2020_02_20 - Center Copy0003.png" type="Texture" id=47]
[ext_resource path="res://assets/Sprites/Characters/Enemy_1 - Bandit/Damage/The_Game__2020_02_20 - Center Copy0004.png" type="Texture" id=48]
[ext_resource path="res://assets/Sprites/Characters/Enemy_1 - Bandit/Damage/The_Game__2020_02_20 - Center Copy0005.png" type="Texture" id=49]
[ext_resource path="res://assets/Sprites/Characters/Enemy_1 - Bandit/Damage/The_Game__2020_02_20 - Center Copy0006.png" type="Texture" id=50]
[ext_resource path="res://assets/Sprites/Characters/Enemy_1 - Bandit/Damage/The_Game__2020_02_20 - Center Copy0007.png" type="Texture" id=51]
[ext_resource path="res://assets/Sprites/Characters/Enemy_1 - Bandit/Damage/The_Game__2020_02_20 - Center Copy0008.png" type="Texture" id=52]
[ext_resource path="res://assets/Sprites/Characters/Enemy_1 - Bandit/Damage/The_Game__2020_02_20 - Center Copy0009.png" type="Texture" id=53]
[ext_resource path="res://assets/Sprites/Characters/Enemy_1 - Bandit/Damage/The_Game__2020_02_20 - Center Copy0010.png" type="Texture" id=54]
[ext_resource path="res://assets/Sprites/Characters/Enemy_1 - Bandit/Damage/The_Game__2020_02_20 - Center Copy0011.png" type="Texture" id=55]
[ext_resource path="res://assets/Sprites/Characters/Enemy_1 - Bandit/Damage/The_Game__2020_02_20 - Center Copy0012.png" type="Texture" id=56]
[ext_resource path="res://assets/Sprites/Characters/Enemy_1 - Bandit/Death/The_Game__2020_02_20 - Center Copy0001.png" type="Texture" id=57]
[ext_resource path="res://assets/Sprites/Characters/Enemy_1 - Bandit/Death/The_Game__2020_02_20 - Center Copy0002.png" type="Texture" id=58]
[ext_resource path="res://assets/Sprites/Characters/Enemy_1 - Bandit/Death/The_Game__2020_02_20 - Center Copy0003.png" type="Texture" id=59]
[ext_resource path="res://assets/Sprites/Characters/Enemy_1 - Bandit/Death/The_Game__2020_02_20 - Center Copy0004.png" type="Texture" id=60]
[ext_resource path="res://assets/Sprites/Characters/Enemy_1 - Bandit/Death/The_Game__2020_02_20 - Center Copy0005.png" type="Texture" id=61]
[ext_resource path="res://assets/Sprites/Characters/Enemy_1 - Bandit/Death/The_Game__2020_02_20 - Center Copy0006.png" type="Texture" id=62]
[ext_resource path="res://assets/Sprites/Characters/Enemy_1 - Bandit/Death/The_Game__2020_02_20 - Center Copy0007.png" type="Texture" id=63]
[ext_resource path="res://assets/Sprites/Characters/Enemy_1 - Bandit/Death/The_Game__2020_02_20 - Center Copy0008.png" type="Texture" id=64]
[ext_resource path="res://assets/Sprites/Characters/Enemy_1 - Bandit/Death/The_Game__2020_02_20 - Center Copy0009.png" type="Texture" id=65]
[ext_resource path="res://assets/Sprites/Characters/Enemy_1 - Bandit/Death/The_Game__2020_02_20 - Center Copy0010.png" type="Texture" id=66]
[ext_resource path="res://assets/Sprites/Characters/Enemy_1 - Bandit/Death/The_Game__2020_02_20 - Center Copy0011.png" type="Texture" id=67]
[ext_resource path="res://assets/Sprites/Characters/Enemy_1 - Bandit/Death/The_Game__2020_02_20 - Center Copy0012.png" type="Texture" id=68]
[ext_resource path="res://assets/Sprites/Characters/Enemy_1 - Bandit/Death/The_Game__2020_02_20 - Center Copy0013.png" type="Texture" id=69]
[ext_resource path="res://assets/Sprites/Characters/Enemy_1 - Bandit/Death/The_Game__2020_02_20 - Center Copy0014.png" type="Texture" id=70]
[ext_resource path="res://assets/Sprites/Characters/Enemy_1 - Bandit/Death/The_Game__2020_02_20 - Center Copy0015.png" type="Texture" id=71]
[ext_resource path="res://assets/Sprites/Characters/Enemy_1 - Bandit/Death/The_Game__2020_02_20 - Center Copy0016.png" type="Texture" id=72]
[ext_resource path="res://assets/Sprites/Characters/Enemy_1 - Bandit/Death/The_Game__2020_02_20 - Center Copy0017.png" type="Texture" id=73]
[ext_resource path="res://assets/Sprites/Characters/Enemy_1 - Bandit/Death/The_Game__2020_02_20 - Center Copy0018.png" type="Texture" id=74]
[ext_resource path="res://assets/Sprites/Characters/Enemy_1 - Bandit/Death/The_Game__2020_02_20 - Center Copy0019.png" type="Texture" id=75]
[ext_resource path="res://assets/Sprites/Characters/Enemy_1 - Bandit/Death/The_Game__2020_02_20 - Center Copy0020.png" type="Texture" id=76]
[ext_resource path="res://assets/Sprites/Characters/Enemy_1 - Bandit/Death/The_Game__2020_02_20 - Center Copy0021.png" type="Texture" id=77]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ) ],
"loop": false,
"name": "attack",
"speed": 36.0
}, {
"frames": [ ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 30 ), ExtResource( 31 ), ExtResource( 32 ), ExtResource( 33 ), ExtResource( 34 ), ExtResource( 35 ), ExtResource( 36 ), ExtResource( 37 ), ExtResource( 38 ), ExtResource( 39 ), ExtResource( 40 ), ExtResource( 41 ), ExtResource( 42 ), ExtResource( 43 ), ExtResource( 44 ) ],
"loop": true,
"name": "walk",
"speed": 24.0
}, {
"frames": [ ExtResource( 45 ), ExtResource( 46 ), ExtResource( 47 ), ExtResource( 48 ), ExtResource( 49 ), ExtResource( 50 ), ExtResource( 51 ), ExtResource( 52 ), ExtResource( 53 ), ExtResource( 54 ), ExtResource( 55 ), ExtResource( 56 ) ],
"loop": false,
"name": "damage",
"speed": 54.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": false,
"name": "idel",
"speed": 1.0
}, {
"frames": [ ExtResource( 57 ), ExtResource( 58 ), ExtResource( 59 ), ExtResource( 60 ), ExtResource( 61 ), ExtResource( 62 ), ExtResource( 63 ), ExtResource( 64 ), ExtResource( 65 ), ExtResource( 66 ), ExtResource( 67 ), ExtResource( 68 ), ExtResource( 69 ), ExtResource( 70 ), ExtResource( 71 ), ExtResource( 72 ), ExtResource( 73 ), ExtResource( 74 ), ExtResource( 75 ), ExtResource( 76 ), ExtResource( 77 ) ],
"loop": false,
"name": "death",
"speed": 24.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 42.8617, 65.8184 )

[sub_resource type="CircleShape2D" id=3]
radius = 44.2828

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 186.871, 85.0834 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 93.307, 83.9171 )

[sub_resource type="CapsuleShape2D" id=6]
radius = 70.3981
height = 12.5141

[sub_resource type="CapsuleShape2D" id=7]
radius = 53.0593
height = 32.5808

[node name="Bandit" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="BanditStateMachine" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="body" type="Node2D" parent="."]

[node name="AnimatedSprite" type="AnimatedSprite" parent="body"]
position = Vector2( 1.9025, -126 )
frames = SubResource( 1 )
animation = "idel"
playing = true

[node name="PhysicsShape" type="CollisionShape2D" parent="."]
position = Vector2( -0.397217, 18.6691 )
shape = SubResource( 2 )

[node name="PhysicsShape2" type="CollisionShape2D" parent="."]
position = Vector2( -0.413712, -40.6684 )
shape = SubResource( 3 )

[node name="Raycasts" type="Node2D" parent="."]

[node name="RayCast2D" type="RayCast2D" parent="Raycasts"]
position = Vector2( 55, 75 )
enabled = true
cast_to = Vector2( 0, 20 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 233, 0 )
shape = SubResource( 4 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -140, 0 )
shape = SubResource( 5 )

[node name="Bandit_Damage" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bandit_Damage"]
position = Vector2( 30, -26 )
shape = SubResource( 6 )
disabled = true

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Bandit_Damage"]
position = Vector2( 76, 18 )
shape = SubResource( 7 )
disabled = true

[node name="Attack" type="Timer" parent="."]
wait_time = 0.65
one_shot = true

[node name="Delay" type="Timer" parent="."]
wait_time = 0.02
one_shot = true

[node name="Damage" type="Timer" parent="."]
wait_time = 0.41
one_shot = true

[node name="Take_Damage" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Take_Damage"]
position = Vector2( -0.397217, 18.6691 )
shape = SubResource( 2 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Take_Damage"]
position = Vector2( -0.413712, -40.6684 )
shape = SubResource( 3 )
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="Attack" to="." method="_on_Attack_timeout"]
[connection signal="timeout" from="Delay" to="." method="_on_Delay_timeout"]
[connection signal="timeout" from="Damage" to="." method="_on_Damage_timeout"]
[connection signal="area_entered" from="Take_Damage" to="." method="_on_Take_Damage_area_entered"]
[connection signal="area_exited" from="Take_Damage" to="." method="_on_Take_Damage_area_exited"]
